Fixed bug when user enters invalid credentials and no appropriate message is shown. Also fixed bugs in registration page for the same.